# Diary_For_Windows

./: .clang-format  .gitignore  CMakeLists.txt  Diary.sln  README.md
Diary/: Diary.aps  Diary.cpp  Diary.h  Diary.rc  Diary.vcxproj  Diary.vcxproj.filters  KLog.h  Resource.h  StringConvert.cpp  StringConvert.h  dialog.cpp  dialog.h  displayutils.cpp  displayutils.h  editpage.cpp  editpage.h  framework.h  listpage.cpp  listpage.h  utils.h
Diary/libs/: sqlite3.lib
LibSqlite3/: LibSqlite3.cpp  LibSqlite3.def  LibSqlite3.rc  LibSqlite3.vcxproj  LibSqlite3.vcxproj.filters  Resource.h  db_manager.cpp  pch.h
LibSqlite3/res/: LibSqlite3.rc2
SQlite3Library/: CMakeLists.txt  SQlite3Library.cpp  SQlite3Library.h
Test/: CMakeLists.txt  db_helper.cpp  db_helper.h  main.cpp
